--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script src="js/app.js" type="text/javascript"></script>
+	<script src="js/ngRouter.js" type="text/javascript"></script>
 
 </body>
 </html>
